提交接口撤回接口调试分页接口

--- a/src/modules/bdm/components/Card/index.less
+++ b/src/modules/bdm/components/Card/index.less
@@ -49,9 +49,9 @@
                 top: 7px;
                 right: 101px;
             }
-            .saveBtn {
+            .u-button.saveBtn {
                 display: inline-block;
-                right: 23px;
+                right: 15px;
                 position: absolute;
                 top: 7px;
 
@@ -296,7 +296,7 @@ element.style {
 }
 
 .hide {
-    display: none
+    display: none !important;
 }
 
 .Ref-Search .u-form-control-search .uf-search {
